Set CMake v3.23 and add executable suffix
Signed-off-by: Diogo Behrens <diogo.behrens@huawei.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.23)
 project(
     benchamel
     LANGUAGES C CXX)
+
+
+set(CMAKE_EXECUTABLE_SUFFIX ".x")
 
 add_subdirectory(ConVul)
 add_subdirectory(libvsync)
