--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
+
 project(
     benchamel
-    LANGUAGES C CXX)
+    LANGUAGES C CXX
+    VERSION 0.1)
 
 add_subdirectory(ConVul)
 add_subdirectory(libvsync)
