--- a/ConVul/CMakeLists.txt
+++ b/ConVul/CMakeLists.txt
@@ -1,4 +1,7 @@
-file(GLOB SRCS cve-benchmark/*.cpp)
+# for now we disable all convul tests on macOS
+if(NOT ${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
+    file(GLOB SRCS cve-benchmark/*.cpp)
+endif()
 
 foreach(SRC ${SRCS})
     get_filename_component(NAME ${SRC} NAME_WLE)
