--- a/sctbench/CMakeLists.txt
+++ b/sctbench/CMakeLists.txt
@@ -1,5 +1,9 @@
-file(GLOB SRCS chess/*.cpp)
+# chess
 
+# for now we disable some sctbench tests on macOS
+if(NOT ${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
+    file(GLOB SRCS chess/*.cpp)
+endif()
 foreach(SRC ${SRCS})
     get_filename_component(NAME ${SRC} NAME_WLE)
 	set(TARGET ${NAME})
@@ -7,11 +11,18 @@ foreach(SRC ${SRCS})
 	target_link_libraries(${TARGET} pthread)
 endforeach()
 
-file(GLOB SRCS conc-bugs/aget-bug2/*.c)
-add_executable(aget ${SRCS})
-target_link_libraries(aget pthread)
-configure_file(conc-bugs/aget-bug2/0 0 COPYONLY)
-configure_file(conc-bugs/aget-bug2/17573 17573 COPYONLY)
+# aget
+
+# for now we disable some sctbench tests on macOS
+if(NOT ${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
+    file(GLOB SRCS conc-bugs/aget-bug2/*.c)
+    add_executable(aget ${SRCS})
+    target_link_libraries(aget pthread)
+    configure_file(conc-bugs/aget-bug2/0 0 COPYONLY)
+    configure_file(conc-bugs/aget-bug2/17573 17573 COPYONLY)
+endif()
+
+# pbzip2
 
 set(SRCS blocksort.c huffman.c crctable.c randtable.c compress.c decompress.c bzlib.c)
 list(TRANSFORM SRCS PREPEND conc-bugs/pbzip2-0.9.4/bzip2-1.0.6/)
@@ -20,6 +31,8 @@ add_executable(pbzip2 conc-bugs/pbzip2-0.9.4/pbzip2-0.9.4/pbzip2.cpp)
 target_include_directories(pbzip2 PRIVATE conc-bugs/pbzip2-0.9.4/bzip2-1.0.6)
 target_link_libraries(pbzip2 pthread bz2)
 configure_file(conc-bugs/pbzip2-0.9.4/test.tar test.tar COPYONLY)
+
+# conc-bugs/stringbuffer
 
 file(GLOB SRCS conc-bugs/stringbuffer-jdk1.4/*.cpp)
 add_executable(stringbuffer ${SRCS})
