--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(
     LANGUAGES C CXX
     VERSION 0.1)
 
+message(INFO "Building on ${CMAKE_SYSTEM_NAME}")
+
 add_subdirectory(ConVul)
 add_subdirectory(libvsync)
 add_subdirectory(sctbench)
