--- a/sctbench/CMakeLists.txt
+++ b/sctbench/CMakeLists.txt
@@ -41,5 +41,5 @@ foreach(SRC ${SRCS})
     get_filename_component(NAME ${SRC} NAME_WLE)
 	set(TARGET ${NAME})
 	add_executable(${TARGET} ${SRC})
-	target_link_libraries(${TARGET} pthread tsan)
+	target_link_libraries(${TARGET} pthread)
 endforeach()
