--- a/sctbench/CMakeLists.txt
+++ b/sctbench/CMakeLists.txt
@@ -53,3 +53,13 @@ foreach(SRC ${SRCS})
 	target_link_libraries(${TARGET} pthread)
 endforeach()
 configure_file(inspect_benchmarks/bzip_input bzip_input COPYONLY)
+
+# inspect_examples
+file(GLOB SRCS inspect_examples/*.c)
+foreach(SRC ${SRCS})
+    get_filename_component(NAME ${SRC} NAME_WLE)
+	set(TARGET ${NAME})
+	add_executable(${TARGET} ${SRC})
+	target_link_libraries(${TARGET} pthread m)
+endforeach()
+file(COPY inspect_examples/pfscandir DESTINATION pfscandir)
